--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.9.4",
+    "bizcharts": "^4.1.10",
+    "firebase": "^8.3.1",
+    "google-maps-react": "2.0.6",
+    "iconify": "^1.3.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
+    "style-loader": "^2.0.0",
+    "three": "^0.127.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -37,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-mdi": "^1.1.11",
+    "@iconify/react": "^1.1.4"
   }
 }
